--- a/views/admin/categoryManagement.ejs
+++ b/views/admin/categoryManagement.ejs
@@ -1,6 +1,6 @@
 <section class="p-6">
   <div>
-    <h1 class="font-bold mb-10 text-2xl">User Management</h1>
+    <h1 class="font-bold mb-10 text-2xl">Category Management</h1>
   </div>
   <div class="flex justify-between items-center mb-6">
    <form class="flex w-full max-w-md" method="GET" action="/admin/users">
@@ -25,7 +25,7 @@
     Search
   </button>
 
-   <% if (search && search.trim() !== "") { %>
+   <% if (true) { %>
     <a href="/admin/users"
       class="ml-2 px-5 py-2.5 bg-red-400 text-white rounded-lg hover:bg-gray-500">
       Clear
@@ -33,64 +33,67 @@
   <% } %>
 </form>
 
-    <!-- <button type="button"
+    <button type="button" data-modal-target="crud-modal" data-modal-toggle="crud-modal"
       class="ml-4 flex items-center gap-3 px-5 py-2.5 text-sm font-medium text-white bg-yellow-600 rounded-lg hover:bg-yellow-300 focus:ring-4 focus:outline-none focus:ring-yellow-300">
-      <i class="fa-solid fa-filter"></i>
-      Filter
-    </button> -->
+
+      Add Category
+    </button>
+    
   </div>
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg mb-6">
     <table class="w-full text-sm text-left text-gray-500">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50">
         <tr>
           <th scope="col" class="px-6 py-3">S.No</th>
-          <th scope="col" class="px-6 py-3">Customer Name</th>
-          <th scope="col" class="px-6 py-3">Email</th>
+          <th scope="col" class="px-6 py-3">Category Name</th>
+          <th scope="col" class="px-6 py-3">Description</th>
           <th scope="col" class="px-6 py-3">Status</th>
-          <th scope="col" class="px-6 py-3">Joined Date</th>
+          <th scope="col" class="px-6 py-3">Added Date</th>
           <th scope="col" class="px-6 py-3">Action</th>
         </tr>
       </thead>
       <tbody>
-        <% if(userData && userData.length) { %>
+              <% if(categories && categories.length) { %>
 
-          <% userData.forEach((user,i)=> { %>
+          <% categories.forEach((category,i)=> { %>
             <tr class="bg-white border-b">
               <td class="px-6 py-4">
-                <%= (currentPage-1)*limit+(i+1)%>
+                 <%= i%>
               </td>
               <th scope="row" class="px-6 py-4  font-medium text-gray-600 whitespace-nowrap uppercase">
-                <%=user.name %>
+                 <%=category.name %>
               </th>
-              <td class="px-6 py-4"><%=user.email %></td>
+              <td class="px-6 py-4">Status</td>
               <td class="px-6 py-4">
-                <%= user.isBlocked ? 'Blocked' : "Active" %>
+              <%= category.isBlocked ? 'Blocked' : "Active" %>
               </td>
               <td class="px-6 py-4">
-                <%=user.createdAt.toLocaleDateString("en-IN",{year:'numeric',month:'short',day:'numeric'}) %>
+               <%=category.createdAt.toLocaleDateString("en-IN",{year:'numeric',month:'short',day:'numeric'}) %>
               </td>
               <td class="px-6 py-4">
-                <% if(user.isBlocked){ %>
+                <% if(category.isBlocked){ %>
                   <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
                     class="text-yellow-600 hover:text-green-500 confirm-action cursor-pointer"
-                    data-url="/admin/userunBlocked?id=<%= user._id %>&search=<%= search %>&page=<%= currentPage %>">
+                    data-url="">
                     Unblock
                   </button>
                   <% } else { %>
                     <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
                       class="text-yellow-600 hover:text-red-500 confirm-action cursor-pointer"
-                      data-url="/admin/userBlocked?id=<%= user._id %>&search=<%= search %>&page=<%= currentPage %>">
+                      data-url="">
                       Block
                     </button>
                     <% } %>
 
               </td>
             </tr>
-            <% }) %>
+
+             <% }) %>
 
               <% } else{%>
                 <td class="p-2">User Data Not Found</td>
-                <% } %>
+                <% } %> 
+
       </tbody>
     </table>
   </div>
@@ -101,8 +104,8 @@
       <ul class="flex items-center -space-x-px h-10 text-base">
         <!-- Previous Button -->
         <li>
-          <a href="/admin/users?page=<%= currentPage - 1 %>&limit=<%= limit %>&search=<%= search %>"
-            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 <%= currentPage === 1 ? 'pointer-events-none opacity-50' : '' %>">
+          <a href=""
+            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700  %>">
             <span class="sr-only">Previous</span>
             <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -112,10 +115,10 @@
         </li>
 
         <!-- Page Numbers -->
-        <% for(let i=1; i <=totalPages; i++) { %>
+        <% for(let i=1; i <=4; i++) { %>
           <li>
-            <a href="/admin/users?page=<%= i %>&limit=<%= limit %>&search=<%= search %>"
-              class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 <%= currentPage === i ? 'z-10 text-yellow-600 border-yellow-300 bg-yellow-50' : '' %>">
+            <a href=""
+              class="flex items-center justify-center px-4 h-10 leading-tight  bg-white border  hover:bg-gray-100 %>">
               <%= i %>
             </a>
           </li>
@@ -123,8 +126,8 @@
 
             <!-- Next Button -->
             <li>
-              <a href="/admin/users?page=<%= currentPage + 1 %>&limit=<%= limit %>&search=<%= search %>"
-                class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 <%= currentPage === totalPages ? 'pointer-events-none opacity-50' : '' %>">
+              <a href=""
+                class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 ">
                 <span class="sr-only">Next</span>
                 <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -159,7 +162,7 @@
             d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
         </svg>
         <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this
-          product?</h3>
+          category?</h3>
         <button id="confirm-yes" data-modal-hide="popup-modal" type="button"
           class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
           Yes, I'm sure
@@ -171,16 +174,44 @@
     </div>
   </div>
 </div>
-<script>let targetUrl = null;
 
-  document.querySelectorAll('.confirm-action').forEach(btn => {
-    btn.addEventListener('click', () => {
-      targetUrl = btn.getAttribute('data-url');
-      document.getElementById('popup-modal').classList.remove('hidden');
-    });
-  });
 
-  document.getElementById('confirm-yes').addEventListener('click', () => {
-    if (targetUrl) window.location.href = targetUrl;
-  });
-</script>
+<div id="crud-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div class="relative p-4 w-full max-w-md max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow-sm">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
+        <h3 class="text-lg font-semibold text-gray-900">
+          Create New Category
+        </h3>
+        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center" data-modal-toggle="crud-modal">
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <form class="p-4 md:p-5" action="/admin/category" method="POST">
+        <div class="grid gap-4 mb-4 grid-cols-2">
+          <div class="col-span-2">
+            <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+            <input type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" placeholder="Type category name" required>
+          </div>
+          <div class="col-span-2">
+            <label for="description" class="block mb-2 text-sm font-medium text-gray-900">Category Description</label>
+            <textarea name="description" id="description" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="Write category description here"></textarea>                    
+          </div>
+        </div>
+        <button type="submit" class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+          <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path></svg>
+          Add new category
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
