--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -1,19 +1,31 @@
-
-  <aside class=" grid grid-cols-1 w-60 bg-white p-5 border-r border-gray-200">
-    <div class="flex flex-col items-center mb-8">
-      <img src="/img/Remove background project.png" alt="Logo" class="h-24 mb-4">
-    </div>
-    <ul class="space-y-4">
-      <li><a href="/admin/dashboard" class="font-medium <%=title=== 'Dashboard' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500'  %>">Dashboard</a></li>
-      <li><a href="/admin/users"class="font-medium <%=title==='User-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500'  %>">User Management</a></li>
-      <li><a href="#" class="font-medium <%=title=== 'Products-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Products Management</a></li>
-      <li><a href="#" class="font-medium <%=title=== 'Order-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Order Management</a></li>
-      <li><a href="#" class="font-medium <%=title=== 'Category-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Category Management</a></li>
-      <li><a href="#" class="font-medium <%=title=== 'Coupon-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Coupon Management</a></li>
-      <li>
-        <a href="/admin/logout" class="bg-yellow-400 text-black px-4 py-2 rounded-md block text-center font-semibold hover:bg-yellow-300">
-          Logout
-        </a>
-      </li>
-    </ul>
-  </aside>
+<aside class=" grid grid-cols-1 w-60 bg-white p-5 border-r border-gray-200">
+  <div class="flex flex-col items-center mb-8">
+    <img src="/img/Remove background project.png" alt="Logo" class="h-24 mb-4">
+  </div>
+  <ul class="space-y-4">
+    <li><a href="/admin/dashboard"
+        class="font-medium <%=title=== 'Dashboard' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500'  %>">Dashboard</a>
+    </li>
+    <li><a href="/admin/users"
+        class="font-medium <%=title==='User-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500'  %>">User
+        Management</a></li>
+    <li><a href="#"
+        class="font-medium <%=title=== 'Products-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Products
+        Management</a></li>
+    <li><a href="#"
+        class="font-medium <%=title=== 'Order-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Order
+        Management</a></li>
+    <li><a href="/admin/category"
+        class="font-medium <%=title=== 'Category-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Category
+        Management</a></li>
+    <li><a href="#"
+        class="font-medium <%=title=== 'Coupon-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Coupon
+        Management</a></li>
+    <li>
+      <a href="/admin/logout"
+        class="bg-yellow-400 text-black px-4 py-2 rounded-md block text-center font-semibold hover:bg-yellow-300">
+        Logout
+      </a>
+    </li>
+  </ul>
+</aside>
